--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
+    "axios": "^1.3.4",
+    "dotenv": "^16.0.3",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
