--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.4",
+    "flowbite": "^1.6.4",
+    "flowbite-react": "^0.4.2",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "redux-mock-store": "^1.5.4",
