--- a/package.json
+++ b/package.json
@@ -27,16 +27,20 @@
     }
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.0",
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.4",
     "flowbite": "^1.6.4",
     "flowbite-react": "^0.4.2",
+    "joi": "^17.9.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
+    "react-toastify": "^9.1.2",
     "redux-mock-store": "^1.5.4",
     "secure-ls": "^1.2.6",
     "swr": "^2.0.3"
