--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@vitest/coverage-c8": "^0.28.5",
     "airbnb": "^0.0.2",
     "autoprefixer": "^10.4.13",
+    "esbuild": "^0.13.4",
     "eslint": "8.31.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
