--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     }
   },
   "dependencies": {
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@material-tailwind/react": "^1.4.2",
+    "@mui/material": "^5.2.3",
+    "@mui/x-data-grid": "^6.2.0",
     "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.3.4",
     "flowbite": "^1.6.4",
