--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
+    "react-select": "^5.7.3",
     "react-toastify": "^9.1.2",
     "redux-mock-store": "^1.5.4",
     "secure-ls": "^1.2.6",
-    "swr": "^2.0.3"
+    "swr": "^2.0.3",
+    "tailwind-datepicker-react": "^1.3.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.19.1",
