--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
     "@reduxjs/toolkit": "^1.9.2",
+    "antd": "^5.16.2",
     "axios": "^1.3.4",
+    "date-fns": "^3.6.0",
     "flowbite": "^1.6.4",
     "flowbite-react": "^0.4.2",
     "joi": "^17.9.1",
@@ -45,8 +47,11 @@
     "react-toastify": "^9.1.2",
     "redux-mock-store": "^1.5.4",
     "secure-ls": "^1.2.6",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "swr": "^2.0.3",
-    "tailwind-datepicker-react": "^1.3.0"
+    "tailwind-datepicker-react": "^1.3.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.19.1",
